# data-coding-challenge

./: Makefile  README.md  pyproject.toml
environment/: README.md  dc.sh  docker-compose.yaml
environment/fs/volumes/ch-proxy/config/: config.yml
environment/fs/volumes/clickhouse-01/etc/clickhouse-server/users.d/: users.xml
