[project]
name = "marketing_pipeline"
version = "0.1.0"
requires-python = ">=3.10"

# runtime deps minimal example (adjust to your DB/orchestrator choices)
dependencies = [
  "requests",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "dagster",
  "dagster-webserver",
  "dbt-core",
  # choose ONE adapter that matches your DB:
  # "dbt-clickhouse", "dbt-postgres", "dbt-bigquery", "dbt-snowflake", "dbt-duckdb",
  "clickhouse-connect",   # or psycopg2-binary / google-cloud-bigquery / snowflake-connector-python / duckdb
  "pytest",
  "black",
  "mypy",
  "pre-commit",
]
